# polls.in-main

./: LICENSE  README.md  docker-compose.yml  firebase-applet-config.json  firebase-blueprint.json  firestore.rules  init.sql  metadata.json  package-lock.json  package.json
cpp_backend/: CMakeLists.txt  Dockerfile
cpp_backend/src/: main.cpp
data/: polls.db
src/: App.tsx
src/components/: Features.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  Layout.tsx  Pricing.tsx  SocialProof.tsx  UseCases.tsx
src/context/: AuthContext.tsx
src/pages/: AdminPanel.tsx  Dashboard.tsx  Login.tsx  PollCreate.tsx  PollView.tsx
vanilla_frontend/: index.html
vanilla_frontend/css/: style.css
vanilla_frontend/js/: app.js
